feat: Add a very simple usage example of carousel

--- a/index.html
+++ b/index.html
@@ -18,8 +18,20 @@
       </div>
     </div>
 
+    <div id="restaurant-photos">
 
+    </div>
+
+    <!-- very simple styling for the examples -->
+    <style>
+      body {
+        display: flex;
+        flex-direction: column;
+        gap: 5rem;
+      }
+    </style>
 
     <script type="module" src="/usage-examples/dropdown/dropdown-example.ts"></script>
+    <script type="module" src="/usage-examples/carousel/carousel-example.ts"></script>
   </body>
 </html>
