fix: format all files

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Examples</title>
   </head>
   <body>
-   
     <div id="favourite-food">
       <button class="food-btn">Choose your favorite food</button>
       <div id="food-options">
@@ -18,9 +17,7 @@
       </div>
     </div>
 
-    <div id="restaurant-photos">
-
-    </div>
+    <div id="restaurant-photos"></div>
 
     <!-- very simple styling for the examples -->
     <style>
@@ -31,7 +28,13 @@
       }
     </style>
 
-    <script type="module" src="/usage-examples/dropdown/dropdown-example.ts"></script>
-    <script type="module" src="/usage-examples/carousel/carousel-example.ts"></script>
+    <script
+      type="module"
+      src="/usage-examples/dropdown/dropdown-example.ts"
+    ></script>
+    <script
+      type="module"
+      src="/usage-examples/carousel/carousel-example.ts"
+    ></script>
   </body>
 </html>
